[package]
name = "blake3_processing"
version = "0.1.0"
authors = ["Alex Miller, Jonah Kaye, Claudia Richoux"]
repository = "https://github.com/banyancomputer/blake3_processing"
readme = "README.md"
description = "Banyan's library for everything Blake3 and Bao"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.82"
anyhow = "1.0"
blake3 = "1.3.1"
rand = "0.8.5"
time = "0.1.12"
bao = "0.12.1"